# fnox-py

./: .pre-commit-config.yaml  AGENTS.md  FNOX_HASHES.json  README.md  justfile  pyproject.toml
.github/workflows/: automated-tags.yml  ci.yml  release.yml  sync-upstream.yml
scripts/: build_platform_wheel.py  sync_upstream.py
src/fnox_py/: __init__.py  api.py  binary.py  cli.py  errors.py  runner.py
tests/: conftest.py  test_api.py  test_binary.py  test_build_platform_wheel.py  test_cli.py  test_errors.py  test_runner.py  test_sync_upstream.py
